--- a/source/style/_main.scss
+++ b/source/style/_main.scss
@@ -77,7 +77,7 @@ $link-color-light--hover: #ffffff;
         height: 5px;
         background-color: #fff;
         transform-origin: center;
-        transition: transform 0.3s linear, opacity 0.2s linear;
+        transition: transform 0.3s linear, opacity 0.2s linear, background-color 0.3s ease-in;
     }
     &__line:not(:last-child) {
         margin-bottom: 10px;
