--- a/source/style/style.css
+++ b/source/style/style.css
@@ -543,10 +543,10 @@ img {
   background-color: #fff;
   -webkit-transform-origin: center;
           transform-origin: center;
-  -webkit-transition: opacity 0.2s linear, -webkit-transform 0.3s linear;
-  transition: opacity 0.2s linear, -webkit-transform 0.3s linear;
-  transition: transform 0.3s linear, opacity 0.2s linear;
-  transition: transform 0.3s linear, opacity 0.2s linear, -webkit-transform 0.3s linear;
+  -webkit-transition: opacity 0.2s linear, background-color 0.3s ease-in, -webkit-transform 0.3s linear;
+  transition: opacity 0.2s linear, background-color 0.3s ease-in, -webkit-transform 0.3s linear;
+  transition: transform 0.3s linear, opacity 0.2s linear, background-color 0.3s ease-in;
+  transition: transform 0.3s linear, opacity 0.2s linear, background-color 0.3s ease-in, -webkit-transform 0.3s linear;
 }
 
 .main-nav-toggle__line:not(:last-child) {
@@ -997,6 +997,9 @@ img {
   .projects {
     padding: 30px 0;
   }
+  .projects__filter {
+    margin-bottom: 10px;
+  }
   .projects__item {
     -ms-flex-preferred-size: calc((100% / 12 * 12) - (0px * 2));
         flex-basis: calc((100% / 12 * 12) - (0px * 2));
@@ -1007,6 +1010,9 @@ img {
   .projects--gray {
     padding-top: 80px;
   }
+  .projects-filter__toggle {
+    margin-bottom: 10px;
+  }
   .projects-filter__list {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
@@ -1015,8 +1021,8 @@ img {
   .projects-filter__item {
     position: relative;
     -webkit-box-flex: 1;
-        -ms-flex: 1 1 45%;
-            flex: 1 1 45%;
+        -ms-flex: 1 1 calc(50% - 10px);
+            flex: 1 1 calc(50% - 10px);
     margin: 5px;
     padding: 8px 12px;
     text-align: center;
@@ -1029,8 +1035,8 @@ img {
     width: 100%;
   }
   .projects-filter__item::before {
-    position: absolute;
     content: '';
+    position: absolute;
     top: 0;
     left: 0;
     width: 0;
