--- a/source/style/_projects.scss
+++ b/source/style/_projects.scss
@@ -20,34 +20,34 @@
 }
 
 
-.projects-filter {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    &__toggle {
-        width: 16px;
-        height: 16px;
-        margin-bottom: 20px;
-        background-color: #eaeaea;
-        cursor: pointer;
-    }
-    &__list {
-        display: flex;
-        font-size: 12px;
-        font-weight: 500;
-        list-style: none;
-    }
-    &__item {
-        padding: 0px 17px;
-        color: #5f5f5f;
-        text-transform: uppercase;
-        cursor: pointer;
-        transition: color 0.3s ease-in;
-        &:hover {
-            color: #000000;
-        }
-    }
-}
+// .projects-filter {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//     &__toggle {
+//         width: 16px;
+//         height: 16px;
+//         margin-bottom: 20px;
+//         background-color: #eaeaea;
+//         cursor: pointer;
+//     }
+//     &__list {
+//         display: flex;
+//         font-size: 12px;
+//         font-weight: 500;
+//         list-style: none;
+//     }
+//     &__item {
+//         padding: 0px 17px;
+//         color: #5f5f5f;
+//         text-transform: uppercase;
+//         cursor: pointer;
+//         transition: color 0.3s ease-in;
+//         &:hover {
+//             color: #000000;
+//         }
+//     }
+// }
 
 
 .project {
@@ -132,38 +132,38 @@
         padding-top: 80px;
     }
 
-    .projects-filter {
-        &__toggle {
-            margin-bottom: 10px;
-        }
-        &__list {
-            flex-wrap: wrap;
-            margin: 0 -5px;
-        }
-        &__item {
-            position: relative;
-            flex: 1 1 calc(50% - 10px);
-            margin: 5px;
-            padding: 8px 12px;
-            text-align: center;
-            border: 1px solid #6f6f6f;
-            background-color: transparent;
-            box-sizing: border-box;
-            &:hover::before {
-                width: 100%;
-            }
-            &::before {
-                content: '';
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 0;
-                height: 100%;
-                background-color: #5f5f5f;
-                transition: width 0.3s ease-in;
-                opacity: 0.5;
-            }
-        }
-    }
+    // .projects-filter {
+    //     &__toggle {
+    //         margin-bottom: 10px;
+    //     }
+    //     &__list {
+    //         flex-wrap: wrap;
+    //         margin: 0 -5px;
+    //     }
+    //     &__item {
+    //         position: relative;
+    //         flex: 1 1 calc(50% - 10px);
+    //         margin: 5px;
+    //         padding: 8px 12px;
+    //         text-align: center;
+    //         border: 1px solid #6f6f6f;
+    //         background-color: transparent;
+    //         box-sizing: border-box;
+    //         &:hover::before {
+    //             width: 100%;
+    //         }
+    //         &::before {
+    //             content: '';
+    //             position: absolute;
+    //             top: 0;
+    //             left: 0;
+    //             width: 0;
+    //             height: 100%;
+    //             background-color: #5f5f5f;
+    //             transition: width 0.3s ease-in;
+    //             opacity: 0.5;
+    //         }
+    //     }
+    // }
 
 }
