--- a/source/style/style.scss
+++ b/source/style/style.scss
@@ -9,6 +9,7 @@
 @import 'blocks/logo';
 @import 'blocks/button';
 @import 'blocks/social';
+@import 'blocks/filter';
 
 @import 'main';
 @import 'about';
