--- a/source/style/style.css
+++ b/source/style/style.css
@@ -1130,6 +1130,10 @@ img {
   background-color: #fafafa;
 }
 
+.blog__filter {
+  margin-bottom: 30px;
+}
+
 .blog__list {
   padding-bottom: 20px;
 }
@@ -1141,6 +1145,18 @@ img {
   margin-right: 0px;
   margin-left: 0px;
   margin: 0 auto;
+}
+
+.blog__item {
+  width: 100%;
+}
+
+.blog--gray {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  padding: 120px 0 80px;
+  background-color: #f6f6f6;
 }
 
 .blog-post {
@@ -1214,9 +1230,23 @@ img {
   font-size: 15px;
 }
 
+@media screen and (max-width: 1023px) {
+  .blog__list--center {
+    -ms-flex-preferred-size: calc((100% / 12 * 10) - (0px * 2));
+        flex-basis: calc((100% / 12 * 10) - (0px * 2));
+    max-width: calc((100% / 12 * 10) - (0px * 2));
+    margin-right: 0px;
+    margin-left: 0px;
+    margin: 0 auto;
+  }
+}
+
 @media screen and (max-width: 600px) {
   .blog {
     padding: 30px 0;
+  }
+  .blog__filter {
+    margin-bottom: 10px;
   }
   .blog__list--center {
     -ms-flex-preferred-size: calc((100% / 12 * 12) - (0px * 2));
@@ -1224,6 +1254,9 @@ img {
     max-width: calc((100% / 12 * 12) - (0px * 2));
     margin-right: 0px;
     margin-left: 0px;
+  }
+  .blog--gray {
+    padding-top: 80px;
   }
 }
 
