--- a/source/style/_main.scss
+++ b/source/style/_main.scss
@@ -100,7 +100,7 @@ $link-color-light--hover: #ffffff;
 
 .main {
     position: relative;
-    height: 100vh;
+    min-height: 100vh;
     padding-top: 300px;
     color: #ffffff;
     font-family: 'Playfair Display', serif;
