added scroll down button

--- a/source/style/common/_common.scss
+++ b/source/style/common/_common.scss
@@ -23,6 +23,7 @@ img {
     flex-direction: column;
     font-family: 'Work Sans', Arial, Helvetica, sans-serif;
     line-height: 1.65;
+    -webkit-font-smoothing: antialiased;
 }
 
 
