--- a/source/style/style.scss
+++ b/source/style/style.scss
@@ -10,6 +10,7 @@
 @import 'blocks/button';
 @import 'blocks/social';
 @import 'blocks/filter';
+@import 'blocks/scroll-down';
 
 @import 'main';
 @import 'about';
