fix scroll, change tag to button for  native outline/kb use

--- a/source/style/style.css
+++ b/source/style/style.css
@@ -546,6 +546,7 @@ img {
   width: 48px;
   height: 48px;
   text-align: center;
+  background-color: transparent;
   border: 1px solid #ffffff;
   border-radius: 50%;
   -webkit-transform: translateX(-50%);
