--- a/source/style/blocks/_scroll-down.scss
+++ b/source/style/blocks/_scroll-down.scss
@@ -5,6 +5,7 @@
     width: 48px;
     height: 48px;
     text-align: center;
+    background-color: transparent;
     border: 1px solid #ffffff;
     border-radius: 50%;
     transform: translateX(-50%);
