--- a/source/style/style.css
+++ b/source/style/style.css
@@ -475,6 +475,8 @@ img {
   height: 16px;
   margin-bottom: 20px;
   background-color: #eaeaea;
+  background-image: -webkit-gradient(linear, left top, right top, color-stop(35%, rgba(0, 0, 0, 0.3)), color-stop(35%, transparent), color-stop(65%, transparent), color-stop(65%, rgba(0, 0, 0, 0.3))), -webkit-gradient(linear, left top, left bottom, color-stop(35%, rgba(0, 0, 0, 0.3)), color-stop(35%, transparent), color-stop(65%, transparent), color-stop(65%, rgba(0, 0, 0, 0.3)));
+  background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.3) 35%, transparent 35%, transparent 65%, rgba(0, 0, 0, 0.3) 65%), linear-gradient(rgba(0, 0, 0, 0.3) 35%, transparent 35%, transparent 65%, rgba(0, 0, 0, 0.3) 65%);
   cursor: pointer;
 }
 
