--- a/source/style/_main.scss
+++ b/source/style/_main.scss
@@ -23,6 +23,7 @@ $link-color-light--hover: #ffffff;
 .main-header--light {
     color: $link-color-light;
     background-color: #fff;
+    box-shadow: 0 2px 6px rgba($color: #000000, $alpha: 0.2);
     .main-nav-toggle {
         &__line {
             background-color: #a3a3a3;
