--- a/source/style/common/_fonts.scss
+++ b/source/style/common/_fonts.scss
@@ -4,7 +4,7 @@
         url('../fonts/PlayfairDisplay-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-    font-display: swap;
+    font-display: auto;
 }
 
 @font-face {
@@ -13,7 +13,7 @@
         url('../fonts/WorkSans-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-    font-display: swap;
+    font-display: auto;
 }
 
 @font-face {
@@ -22,7 +22,7 @@
         url('../fonts/PlayfairDisplay-BoldItalic.woff') format('woff');
     font-weight: bold;
     font-style: italic;
-    font-display: swap;
+    font-display: auto;
 }
 
 @font-face {
@@ -31,7 +31,7 @@
         url('../fonts/PlayfairDisplay-Bold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
-    font-display: swap;
+    font-display: auto;
 }
 
 @font-face {
@@ -40,7 +40,7 @@
         url('../fonts/PlayfairDisplay-Italic.woff') format('woff');
     font-weight: normal;
     font-style: italic;
-    font-display: swap;
+    font-display: auto;
 }
 
 @font-face {
@@ -49,7 +49,7 @@
         url('../fonts/WorkSans-Medium.woff') format('woff');
     font-weight: 500;
     font-style: normal;
-    font-display: swap;
+    font-display: auto;
 }
 
 @font-face {
@@ -58,6 +58,6 @@
         url('../fonts/WorkSans-Bold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
-    font-display: swap;
+    font-display: auto;
 }
 
