attempt to fix problems with iphone click

--- a/source/template/header.html
+++ b/source/template/header.html
@@ -10,7 +10,7 @@
                 </div>
             </div>
 
-            <div class="main-nav-toggle js-menu-toggle">
+            <div class="main-nav-toggle js-menu-toggle" onclick="">
                 <div class="main-nav-toggle__line"></div>
                 <div class="main-nav-toggle__line"></div>
                 <div class="main-nav-toggle__line"></div>
