--- a/source/style/blocks/_filter.scss
+++ b/source/style/blocks/_filter.scss
@@ -26,9 +26,11 @@
         list-style: none;
     }
     &__item {
+        display: block;
         padding: 0px 17px;
         color: #5f5f5f;
         text-transform: uppercase;
+        text-decoration: none;
         cursor: pointer;
         transition: color 0.3s ease-in;
         &:hover {
