--- a/source/style/style.css
+++ b/source/style/style.css
@@ -498,9 +498,11 @@ img {
 }
 
 .filter__item {
+  display: block;
   padding: 0px 17px;
   color: #5f5f5f;
   text-transform: uppercase;
+  text-decoration: none;
   cursor: pointer;
   -webkit-transition: color 0.3s ease-in;
   transition: color 0.3s ease-in;
