--- a/source/style/blocks/_filter.scss
+++ b/source/style/blocks/_filter.scss
@@ -25,7 +25,7 @@
         font-weight: 500;
         list-style: none;
     }
-    &__item {
+    &__link {
         display: block;
         padding: 0px 17px;
         color: #5f5f5f;
@@ -52,17 +52,22 @@
         &__list {
             flex-wrap: wrap;
             margin: 0 -5px;
+            text-align: center;
         }
         &__item {
-            position: relative;
             flex: 1 1 calc(50% - 10px);
             margin: 5px;
+        }
+        &__link {
+            position: relative;
             padding: 8px 12px;
-            text-align: center;
             border: 1px solid #6f6f6f;
             background-color: transparent;
             box-sizing: border-box;
             &:hover::before {
+                width: 100%;
+            }
+            &:active::before{
                 width: 100%;
             }
             &::before {
