--- a/source/style/style.css
+++ b/source/style/style.css
@@ -497,7 +497,7 @@ img {
   list-style: none;
 }
 
-.filter__item {
+.filter__link {
   display: block;
   padding: 0px 17px;
   color: #5f5f5f;
@@ -508,7 +508,7 @@ img {
   transition: color 0.3s ease-in;
 }
 
-.filter__item:hover {
+.filter__link:hover {
   color: #000000;
 }
 
@@ -522,24 +522,29 @@ img {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     margin: 0 -5px;
+    text-align: center;
   }
   .filter__item {
-    position: relative;
     -webkit-box-flex: 1;
         -ms-flex: 1 1 calc(50% - 10px);
             flex: 1 1 calc(50% - 10px);
     margin: 5px;
+  }
+  .filter__link {
+    position: relative;
     padding: 8px 12px;
-    text-align: center;
     border: 1px solid #6f6f6f;
     background-color: transparent;
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
   }
-  .filter__item:hover::before {
+  .filter__link:hover::before {
     width: 100%;
   }
-  .filter__item::before {
+  .filter__link:active::before {
+    width: 100%;
+  }
+  .filter__link::before {
     content: '';
     position: absolute;
     top: 0;
