--- a/source/style/blocks/_filter.scss
+++ b/source/style/blocks/_filter.scss
@@ -7,9 +7,9 @@
         height: 20px;
         margin-bottom: 20px;
         background-image: 
-		        linear-gradient(90deg, #333333 50%, transparent 50%),
+		        linear-gradient(90deg, #6f6f6f 50%, transparent 50%),
 		        linear-gradient(90deg, transparent 50%, transparent 50%),
-		        linear-gradient(90deg, #333333 50%, transparent 50%);
+		        linear-gradient(90deg, #6f6f6f 50%, transparent 50%);
         background-position: 0 0, 0 33.333%, 0 100%;
         background-repeat: repeat-x;
         background-size: 66.6666% 33.3333%, 66.6666% 33.3333%, 66.6666% 33.3333%;
@@ -65,9 +65,6 @@
             background-color: transparent;
             box-sizing: border-box;
             &:hover::before {
-                width: 100%;
-            }
-            &:active::before{
                 width: 100%;
             }
             &::before {
