--- a/source/style/_main.scss
+++ b/source/style/_main.scss
@@ -26,7 +26,7 @@ $link-color-light--hover: #ffffff;
     box-shadow: 0 2px 6px rgba($color: #000000, $alpha: 0.2);
     .main-nav-toggle {
         &__line {
-            background-color: #a3a3a3;
+            background-color: #6f6f6f;
         }
     }
 }
@@ -76,7 +76,7 @@ $link-color-light--hover: #ffffff;
     &__line {
         width: 100%;
         height: 5px;
-        background-color: #fff;
+        background-color: #ffffff;
         transform-origin: center;
         transition: transform 0.3s linear, opacity 0.2s linear, background-color 0.3s ease-in;
     }
@@ -177,7 +177,7 @@ $link-color-light--hover: #ffffff;
         align-items: center;
         background-color: rgba($color: #303030, $alpha: 0.95);
         transform: translateX(-100%);
-        transition: transform 0.5s ease-in;
+        transition: transform 0.3s ease-in;
         &__list {
             flex-wrap: wrap;
             flex-direction: column;
