--- a/source/style/common/_common.scss
+++ b/source/style/common/_common.scss
@@ -57,6 +57,9 @@ img {
 
 .section-subtitle {
     display: block;
+    max-width: 730px;
+    margin-right: auto;
+    margin-left: auto;
     margin-bottom: 50px;
     color: #5f5f5f;
     font-size: 15px;
