--- a/source/style/style.css
+++ b/source/style/style.css
@@ -60,6 +60,9 @@ img {
 
 .section-subtitle {
   display: block;
+  max-width: 730px;
+  margin-right: auto;
+  margin-left: auto;
   margin-bottom: 50px;
   color: #5f5f5f;
   font-size: 15px;
@@ -626,7 +629,7 @@ img {
 }
 
 .main-header--light .main-nav-toggle__line {
-  background-color: #a3a3a3;
+  background-color: #6f6f6f;
 }
 
 .main-nav {
@@ -679,7 +682,7 @@ img {
 .main-nav-toggle__line {
   width: 100%;
   height: 5px;
-  background-color: #fff;
+  background-color: #ffffff;
   -webkit-transform-origin: center;
           transform-origin: center;
   -webkit-transition: opacity 0.2s linear, background-color 0.3s ease-in, -webkit-transform 0.3s linear;
@@ -797,10 +800,10 @@ img {
     background-color: rgba(48, 48, 48, 0.95);
     -webkit-transform: translateX(-100%);
             transform: translateX(-100%);
-    -webkit-transition: -webkit-transform 0.5s ease-in;
-    transition: -webkit-transform 0.5s ease-in;
-    transition: transform 0.5s ease-in;
-    transition: transform 0.5s ease-in, -webkit-transform 0.5s ease-in;
+    -webkit-transition: -webkit-transform 0.3s ease-in;
+    transition: -webkit-transform 0.3s ease-in;
+    transition: transform 0.3s ease-in;
+    transition: transform 0.3s ease-in, -webkit-transform 0.3s ease-in;
   }
   .main-nav__list {
     -ms-flex-wrap: wrap;
@@ -1419,8 +1422,9 @@ img {
 
 .contacts-form__placeholder--active {
   font-size: 12px;
-  -webkit-transform: translateY(-2.5em);
-          transform: translateY(-2.5em);
+  font-weight: bold;
+  -webkit-transform: translateY(-2.6em);
+          transform: translateY(-2.6em);
 }
 
 .contacts-form__label--name, .contacts-form__label--email {
