fix viewport size on chrome for android, decrease padding

--- a/source/style/_blog.scss
+++ b/source/style/_blog.scss
@@ -113,4 +113,11 @@
     .blog--gray {
         padding-top: 90px;
     }
+    
+    .blog-post {
+        padding: 0;
+        &__content {
+            padding: 15px 10px;
+        }
+    }
 }
