--- a/source/style/_contacts.scss
+++ b/source/style/_contacts.scss
@@ -117,11 +117,17 @@
 @include media(600) {
     .contacts {
         padding: 30px 0;
+        &__title {
+            margin-bottom: 10px;
+        }
         &__info {
             @include flex-columns(12);
+            margin-bottom: 15px;
+            padding: 0;
         }
         &__form {
             @include flex-columns(12);
+            padding: 0;
         }
     }
 
