--- a/source/style/blocks/_scroll-down.scss
+++ b/source/style/blocks/_scroll-down.scss
@@ -1,6 +1,6 @@
 .scroll-down {
     position: absolute;
-    bottom: 65px;
+    bottom: 6%;
     left: 50%;
     width: 48px;
     height: 48px;
@@ -27,5 +27,17 @@
         border-bottom: 1px solid #ffffff;
         transform-origin: center;
         transform: translate(-50%, -50%) rotate(-45deg);
+    }
+}
+
+
+
+@include media(600) {
+    .scroll-down {
+        
+        &::before {
+            width: 10px;
+            height: 10px;
+        }
     }
 }
