--- a/source/style/_main.scss
+++ b/source/style/_main.scss
@@ -19,6 +19,12 @@ $link-color-light--hover: #ffffff;
     &__logo {
         margin-right: auto;
     }
+    &__progress {
+        position: absolute;
+        top: 0;
+        width: 100%;
+        height: 5px;
+    }
 }
 .main-header--light {
     color: $link-color-light;
